[package]
name = "screen-pen"
version = "0.1.3"
description = "Lightweight on-screen drawing pen for Windows"
authors = ["you"]
edition = "2021"

[lib]
name = "screen_pen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
